paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.compile.log
error[E0384]: cannot assign twice to immutable variable `q`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:19:5
   |
 9 |     q = a / b;
   |     --------- first assignment to `q`
...
19 |     q = a / b;
   |     ^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 4 |     let mut q: i32;
   |         +++

error[E0384]: cannot assign twice to immutable variable `r`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:20:5
   |
10 |     r = a % b;
   |     --------- first assignment to `r`
...
20 |     r = a % b;
   |     ^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 5 |     let mut r: i32;
   |         +++

error[E0384]: cannot assign twice to immutable variable `q`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:30:5
   |
 9 |     q = a / b;
   |     --------- first assignment to `q`
...
30 |     q = a / b_neg;
   |     ^^^^^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 4 |     let mut q: i32;
   |         +++

error[E0384]: cannot assign twice to immutable variable `r`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:31:5
   |
10 |     r = a % b;
   |     --------- first assignment to `r`
...
31 |     r = a % b_neg;
   |     ^^^^^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 5 |     let mut r: i32;
   |         +++

error[E0384]: cannot assign twice to immutable variable `q`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:40:5
   |
 9 |     q = a / b;
   |     --------- first assignment to `q`
...
40 |     q = a / b_neg;
   |     ^^^^^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 4 |     let mut q: i32;
   |         +++

error[E0384]: cannot assign twice to immutable variable `r`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/mul_op_c6/sample_003/target.rs:41:5
   |
10 |     r = a % b;
   |     --------- first assignment to `r`
...
41 |     r = a % b_neg;
   |     ^^^^^^^^^^^^^ cannot assign twice to immutable variable
   |
help: consider making this binding mutable
   |
 5 |     let mut r: i32;
   |         +++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0384`.